Add basic post_list_html for landing page

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -19,13 +19,21 @@
             </header>
         </div>
 
-        {% for post in posts %}    
-            <div calls = "post">
-                <p> publicado: {{ post.published_date }}</p>
-                <h2><a href="">{{ post.title }}</a></h2>
-                <p>{{ post.text|linebreaksbr }}</p>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for post in posts %}
+                        <div class="post">
+                            <div class="date">
+                                <p>publicado: {{ post.published_date }}</p>
+                            </div>
+                            <h2><a href="">{{ post.title }}</a></h2>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
-        {% endfor %}
+        </div>
 
         <!-- <article>
             <time>published: 14.06.2014, 12:14</time>
