--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 h1 a, h2 a {
-    color: #C25100;
+    color: #1F65DE;
     font-family: 'Lobster'
 }
 
@@ -11,7 +11,7 @@ body {
 
 /* Los selectores que comienzan con . hacen referencia a clases */
 .page-header {
-    background-color: #C25100;
+    background-color: #1F65DE;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -55,6 +55,10 @@ h1, h2, h3, h4 {
 
 .post h2 a, .post h2 a:visited {
     color: #000000;
+}
+
+.post h2 a:visited{
+    color: #666666
 }
 
 
