--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,61 +1,12 @@
-<!-- Añadir codigo CSS -->
-{% load static %}
-<!-- FIN Añadir codigo CSS -->
-<!DOCTYPE html>
-<html>
-    <head>
-        <!-- To install bootstrap and be able to use CSS -->
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <!-- END To "install" bootstrap-->
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}"> <!-- Import css file -->     
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css"> <!-- Import family font -->
-        <title>Django Example Blog</title> <!---->
-    </head>
-    <body>
-        <div class = "page-header">
-            <header>
-                <h1><a href="/">Django Example Blog</a></h1>
-            </header>
-        </div>
-
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                    {% for post in posts %}
-                        <div class="post">
-                            <div class="date">
-                                <p>publicado: {{ post.published_date }}</p>
-                            </div>
-                            <h2><a href="">{{ post.title }}</a></h2>
-                            <p>{{ post.text|linebreaksbr }}</p>
-                        </div>
-                    {% endfor %}
-                </div>
+{% extends 'blog/base.html' %}
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                <p>publicado: {{ post.published_date }}</p>
             </div>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-
-        <!-- <article>
-            <time>published: 14.06.2014, 12:14</time>
-            <h2><a href="">My first post</a></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Quis auctor elit sed vulputate mi sit. At augue eget arcu dictum varius. Tristique magna sit amet purus. Donec et odio 
-                pellentesque diam volutpat. Dictumst quisque sagittis purus sit amet volutpat consequat mauris nunc. Pulvinar pellentesque
-                 habitant morbi tristique senectus et netus. Augue interdum velit euismod in pellentesque massa placerat duis. Feugiat nibh 
-                 sed pulvinar proin gravida hendrerit lectus. Vestibulum lorem sed risus ultricies tristique nulla aliquet enim. Nunc sed augue 
-                 lacus viverra vitae. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Amet porttitor eget dolor morbi non. 
-                 Ultricies tristique nulla aliquet enim tortor at auctor urna. Eget nunc scelerisque viverra mauris in. Enim facilisis gravida 
-                 neque convallis a.</p>
-        </article>
-
-        <article>
-            <time>published: 14.06.2014, 12:14</time>
-            <h2><a href="">My second post</a></h2>
-            <p>Eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Lorem ipsum dolor sit amet consectetur. Cras semper auctor neque 
-                vitae. Quis vel eros donec ac odio tempor orci dapibus. Sem nulla pharetra diam sit amet nisl suscipit adipiscing. Facilisis magna 
-                etiam tempor orci eu lobortis elementum nibh tellus. Massa sapien faucibus et molestie. Faucibus ornare suspendisse sed nisi lacus 
-                sed viverra tellus. Nec feugiat nisl pretium fusce id. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Ut sem nulla 
-                pharetra diam sit amet nisl.</p>
-        </article> -->
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
